# ConvFelt

./: .clang-format  .clang-tidy  CMakeLists.txt  NOTES.md  README.md  backprop.puml  backprop2.puml  backprop3.puml  conanfile.py  conda.txt
cmake/: CPMInstaller.cmake  CucumberCpp_include.cmake  GUnit_include.cmake  Thirdparty.cmake  conanfile.txt  gherkin-cpp_include.cmake
conda/clang-14-cuda-11/: clang-14-cuda-11.txt
conda/clang-14-cuda-11/etc/conda/activate.d/: update_cc.sh
conda/clang-14-cuda-11/etc/conda/deactivate.d/: update_cc.sh
src/: CMakeLists.txt
src/include/convfelt/: ConvGrid.cpp  ConvGrid.hpp  FilterSizeHelper.hpp  InputImageGrid.hpp  Numeric.hpp  assert_compat.hpp  iter.hpp  memory.hpp
src/include/convfelt/felt2/: index.hpp  typedefs.hpp
src/include/convfelt/felt2/components/: core.hpp  eigen.hpp  sycl.hpp
src/include/convfelt/network/: Network.hpp
src/src/: InputImageGrid.cpp
src/src/network/: Network.cpp
tests/: .clang-tidy  CMakeLists.txt  sycl_util.hpp
tests/feature/: CMakeLists.txt  main.cpp
tests/feature/features/: single_backprop.feature
tests/feature/features/step_definitions/: single_backprop.cpp
tests/spikes/: CMakeLists.txt  applying_convolution_filter.cpp  basic_onemkl.cpp  basic_sycl.cpp  oiio_to_filter_inputs.cpp  oiio_to_grid_via_coroutine.cpp
tests/unit/: CMakeLists.txt  test_ConvGrid.cpp  test_FilterSizeHelper.cpp  test_felt2.cpp  third_party.cpp
tests/unit/felt2/: test_typedefs.cpp
tests/unit/felt2/components/: test_sycl.cpp
